--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,17 @@
 .container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: start;
+  align-content: start;
   background-color: lightskyblue;
 }
 
 .list {
+  position: relative;
   background-color: #f8f9fa;
   padding: 20px;
   border-radius: 8px;
@@ -31,8 +33,15 @@
   cursor: pointer;
 }
 
+.list button {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  cursor: pointer;
+}
+
 .modal {
-  background-color: whitesmoke;
+  background-color: azure;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0,0,0,0.2);
@@ -43,4 +52,31 @@
   z-index: 10;
   width: 80%;
   max-width: 500px;
+}
+
+.input-box {
+  width: 100%;
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-box input {
+  height: 20px;
+  font-size: 16px;
+  margin: 0 10px;
+  border-radius: 10px;
+  border: none;
+  box-shadow: 0 0 3px black;
+}
+
+.input-box button {
+  padding: 3px 10px;
+  font-size: 13px;
+  background-color: lightblue;
+  border: none;
+  box-shadow: 0 0 2px black;
+  border-radius: 10px;
+  cursor: pointer;
 }
